--- a/practicaAula/app/src/main/resources/velocity/index/index.vm
+++ b/practicaAula/app/src/main/resources/velocity/index/index.vm
@@ -1,11 +1,5 @@
 #parse("/velocity/layout.vm")
 #@mainLayout()
 <h1>$msg.get("INDEX_HEADING")</h1>
-<h2>$msg.get("INDEX_REGISTERED_USERS", $users.size())</h2>
-<ul>
-    #foreach($user in $users)
-        <li>$user</li>
-    #end
-</ul>
-<p>$msg.get("INDEX_PASSWORD_INFO")</p>
+<h2>Ramon Del Villar. 10141505</h2>
 #end
