Cambios en la vista, agregando mensajes de error al registrar usuario o articulo

--- a/practica-2/app/src/main/resources/velocity/articleCrud.vm
+++ b/practica-2/app/src/main/resources/velocity/articleCrud.vm
@@ -1,6 +1,11 @@
 #parse("/velocity/layout.vm")
 #@mainLayout()
 <div class="container">
+    #if($articleSucceeded)
+        <p class="good notification">Articulo Creado Exitosamente</p>
+    #elseif($articleFailed)
+        <p class="bad notification">Articulo no fue creado; ya existe un articulo con este cuerpo</p>
+    #end
     <div class="flex justify-end">
         <a href="/autor/crearArticulo" class="button block bg-secondary px-9 py-2 text-center font-body text-xl font-semibold text-white transition-colors hover:bg-green sm:inline-block sm:text-left sm:text-2xl">Crear</a>
     </div>
