--- a/practica-2/app/src/main/resources/velocity/usersCrud.vm
+++ b/practica-2/app/src/main/resources/velocity/usersCrud.vm
@@ -1,6 +1,11 @@
 #parse("/velocity/layout.vm")
 #@mainLayout()
 <div class="container">
+    #if($usuarioSucceeded)
+        <p class="good notification">Usuario Creado Exitosamente</p>
+    #elseif($usuarioFailed)
+        <p class="bad notification">Usuario no fue creado; ya existe un usuario con este nombre</p>
+    #end
     <div class="flex justify-end">
         <a href="/admin/crearUsuario" class="button block bg-secondary px-9 py-2 text-center font-body text-xl font-semibold text-white transition-colors hover:bg-green sm:inline-block sm:text-left sm:text-2xl">Crear</a>
     </div>
