--- a/proyecto/src/main/resources/public/formulario.vm
+++ b/proyecto/src/main/resources/public/formulario.vm
@@ -1,7 +1,8 @@
 #parse("public/layout.vm")
 #@mainLayout()
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 <div class="content-body">
-
     <div class="row page-titles mx-0">
         <div class="col p-md-0">
             <ol class="breadcrumb">
@@ -77,6 +78,24 @@
                                         </select>
                                     </div>
                                 </div>
+                                ## <div class="form-group row">
+                                ##     <label class="col-lg-4 col-form-label" for="val-foto">Foto</label>
+                                ##     <div class="col-lg-6">
+                                ##         <div class="card" >
+                                ##             <img src="data:${form.getFoto().getMimeType()};base64,$form.getFoto().getFotoBase64()" class="card-img-top" alt="Foto enviada">
+                                ##             <div class="card-body">
+                                ##                 <h5 class="card-title">$form.getFoto().getNombre()</h5>
+                                ##                 <p class="card-text">Foto del tipo: $form.getFoto().getMimeType()</p>
+                                ##             </div>
+                                ##         </div>
+                                ##     </div>
+                                ## </div>
+                                <div class="form-group row">
+                                    <label class="col-lg-4 col-form-label" for="val-mapa">Mapa</label>
+                                    <div class="col-lg-6">
+                                        <div class="geolocation" id="miMapa"></div>
+                                    </div>
+                                </div>
                                 <div class="form-group row">
                                     <div class="col-lg-8 ml-auto">
                                         <a href="/formularios" class="btn btn-primary">
@@ -93,4 +112,19 @@
     </div>
     <!-- #/ container -->
 </div>
+<script>
+    console.log("$form.getLatitude()");
+    var latitude = "$form.getLatitude()";
+    var longitude = "$form.getLongitude()";
+    var accuracy = "$form.getAccuracy()";
+    
+    let map = L.map('miMapa').setView([parseFloat(latitude), parseFloat(longitude)], 15);
+
+    L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(map);
+
+    L.marker([parseFloat(latitude), parseFloat(longitude)]).addTo(map).bindPopup("Latitud: "+latitude+"\nLongitud: "+longitude+"\nPrecision: "+accuracy).openPopup();
+
+</script>
 #end
