--- a/proyecto/src/main/resources/public/tablaFormularioOffline.vm
+++ b/proyecto/src/main/resources/public/tablaFormularioOffline.vm
@@ -1,7 +1,7 @@
 #parse("public/layout.vm")
 #@mainLayout()
 <script>
-
+    localStorage.removeItem("idForm");
     var webSocket;
     var tiempoReconectar = 5000;
 
@@ -10,6 +10,12 @@
 
     //indicamos el nombre y la versión
     var dataBase = indexedDB.open("proyecto_final", 1);
+
+    var opcionesGPS = {
+        enableHighAccuracy: true,
+        timeout: 5000,
+        maximumAge: 0
+    }
 
     //se ejecuta la primera vez que se crea la estructura
     //o se cambia la versión de la base de datos.
@@ -44,6 +50,7 @@
         var formularios = data.objectStore("formularios");
         var contador = 0;
         var formularios_recuperados=[];
+        var dataFila = '';
 
         //abriendo el cursor.
         formularios.openCursor().onsuccess=function(e) {
@@ -65,8 +72,6 @@
         //Una vez que se realiza la operación llamo la impresión.
         data.oncomplete = function () {
             if(contador > 0){
-                var dataFila = '';
-                var tmp = '';
                 for (var key in formularios_recuperados) {
                     dataFila += '<tr>';
                     dataFila += '<td>'+formularios_recuperados[key].id+'</td>';
@@ -76,13 +81,12 @@
                     dataFila += '<td><span>';
                     dataFila += '<a href="#" onclick="abrirForm('+formularios_recuperados[key].id+'); return false;" data-toggle="tooltip" data-placement="top" title="Editar"><i class="fa fa-pencil color-muted m-r-5"></i></a>';
                     dataFila += '<a href="#" onclick="borrarFormulario('+formularios_recuperados[key].id+'); return false;" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="fa fa-remove color-danger ml-2"></i></a>';
-                    console.log(JSON.stringify(formularios_recuperados[key]));
                     dataFila += "<a href='#' onclick='enviarForm("+JSON.stringify(formularios_recuperados[key])+"); return false;' data-toggle='tooltip' data-placement='top' title='Enviar'><i class='fa fa-send color-success ml-2'></i></a>";
                     dataFila += '</span></td>';
                     dataFila += '</tr>';
                 }
-                $('#tablaFormularios').html(dataFila);
             }
+            $('#tablaFormularios').html(dataFila);
         }
     }
 
@@ -98,8 +102,8 @@
             var formularios = data.objectStore("formularios");
 
             formularios.delete(idForm).onsuccess = function (e) {
-                alert('Formulario eliminado correctamente.');
                 listarDatos();
+                alert('Formulario eliminado correctamente.');
             };
         }
     }
@@ -107,9 +111,19 @@
     function enviarForm(form){
         verificarConexion();
         if(webSocket && webSocket.readyState != 3){
-            webSocket.send(JSON.stringify(form));
+            navigator.geolocation.getCurrentPosition(function(geodata){
+                var coordenadas = geodata.coords;
+                var jsonForm = JSON.parse(JSON.stringify(form)); //change to obj
+                jsonForm.latitude = coordenadas.latitude; //add something
+                jsonForm.longitude = coordenadas.longitude; //add something
+                jsonForm.accuracy = coordenadas.accuracy; //add something
+                jsonForm = JSON.stringify(jsonForm); //change back to string
+                webSocket.send(jsonForm); 
+             }, function(){
+                 webSocket.send(JSON.stringify(form));
+             }, opcionesGPS);
         }else{
-            alert("No se pudo enviar al servidor..")
+            alert("No se pudo enviar al servidor..");
         }
     }
 
@@ -118,7 +132,18 @@
         * @param mensaje
         */
     function recibirInformacionServidor(mensaje){
-        console.log("Recibiendo del servidor: "+mensaje.data)
+        if(Number(mensaje.data) == 0){
+            alert("No se pudo registrar el formulario en el servidor debido a un error inesperado");
+        }else{
+            var data = dataBase.result.transaction(["formularios"], "readwrite");
+            var formularios = data.objectStore("formularios");
+
+            formularios.delete(Number(mensaje.data)).onsuccess = function (e) {
+                listarDatos();
+            };
+
+            alert('Formulario registrado correctamente en el servidor.');
+        }
     }
     
     function conectar() {
