--- a/proyecto/src/main/resources/public/login.vm
+++ b/proyecto/src/main/resources/public/login.vm
@@ -89,5 +89,17 @@
 <script src="/js/settings.js"></script>
 <script src="/js/gleek.js"></script>
 <script src="/js/styleSwitcher.js"></script>
+<script>
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+            navigator.serviceWorker.register('/serviceworkers.js', { scope: '/' }).then(function(registration) {
+                // Notificando el registro del service workwe
+                console.log('Registrando el servicio en el ambiente: ', registration.scope);
+            }, function(err) {
+                console.log('Service Worker falló el registro: ', err);
+            });
+        });
+    }
+</script>
 </body>
 </html>
