--- a/proyecto/src/main/resources/public/tablaFormularioOffline.vm
+++ b/proyecto/src/main/resources/public/tablaFormularioOffline.vm
@@ -147,7 +147,7 @@
     }
     
     function conectar() {
-        webSocket = new WebSocket("wss://" + location.hostname + ":" + location.port + "/mensajeServidor");
+        webSocket = new WebSocket("ws://" + location.hostname + ":" + location.port + "/mensajeServidor");
 
         //indicando los eventos:
         webSocket.onmessage = function(data){recibirInformacionServidor(data);};
